# socreate

./: .gitignore  BUILD_GUIDE.md  LICENSE  PIPELINE.md  README.md  _config.yml  build.gradle.kts  build.sh  gradle.properties  gradlew  index.html  keystore.properties.template  privacy-policy.html  settings.gradle.kts
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  socreate_renderer.cpp
app/src/main/java/com/socreate/app/: SoCreateApp.kt
app/src/main/res/drawable/: bg_color_preview.xml  bg_panel.xml  bg_quick_menu.xml  bg_toolbar.xml  ic_brush.xml  ic_brush_library.xml  ic_eraser.xml  ic_eyedropper.xml  ic_launcher_foreground.xml  ic_select.xml  ic_smudge.xml
app/src/main/res/layout/: activity_drawing.xml  activity_gallery.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/socreate/app/: AdvancedFeatureTests.kt  DrawingReducerTest.kt  ModelTests.kt  NewFeatureTests.kt
web/: index.html  package.json  tsconfig.json  vite.config.ts  vite.lib.config.ts
web/src/: App.tsx  index.css  index.ts  store.ts
web/src/components/: BrushPanel.tsx  ColorEffectsPanel.tsx  DrawingCanvas.tsx  ExportPanel.tsx  FloatingButton.tsx  GalleryPanel.tsx  LayersPanel.tsx  OnionSkinPanel.tsx  SettingsPanel.tsx  SpriteSheetPanel.tsx  SymmetryPanel.tsx  Timeline.tsx  TransformPanel.tsx
(+45 files in other folders)
